# project-maker

./: .formatignore  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: e2e.yml  release-package.yml
src/model_w/project_maker/: __main__.py  errors.py  grammar.lark  namer.py  template.py
src/model_w/project_maker/maker/: __init__.py  _api.py  _base.py  _common.py  _front.py
src/model_w/project_maker/template/: .editorconfig  .gitignore  README.md  docker-compose-e2e.yaml  mock-digital-ocean-router.conf  run-tests-in-docker.sh
src/model_w/project_maker/template/.github/workflows/: e2e.yml
src/model_w/project_maker/template/api/: .env  .env-template  .env.test  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  conftest.py  manage.py  pyproject.toml
src/model_w/project_maker/template/api/___project_name__snake___/apps/cms/: README.md  api.py  blocks.py  demo.py  models.py  serializers.py  utils.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/cms/__tests__/: test_serializers.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/cms/images/: README.md  blocks.py  models.py  serializers.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/cms/images/__tests__/: test_serializers.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/cms/management/commands/: start_dev.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/cms/migrations/: 0001_initial.py  0002_homepage.py  0003_demopage_alter_customrendition_file.py  0003_project_maker_only.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/cms/templates/cms/: home_page.html
src/model_w/project_maker/template/api/___project_name__snake___/apps/cms/templates/wagtail/userbar/templates/: base.html
src/model_w/project_maker/template/api/___project_name__snake___/apps/cms/wagtail_userbar/: serializers.py  views.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/health/: base.py  checks.py  itertools2.py  models.py  resolver.py  tasks.py  urls.py  views.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/health/migrations/: 0001_initial.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/health/templates/health/: base.html  status.html
src/model_w/project_maker/template/api/___project_name__snake___/apps/health/templatetags/: markdown.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/people/: api.py  models.py  schemas.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/people/__tests__/: test_api.py
src/model_w/project_maker/template/api/___project_name__snake___/apps/people/migrations/: 0001_initial.py
src/model_w/project_maker/template/api/___project_name__snake___/cms/: models.py
src/model_w/project_maker/template/api/___project_name__snake___/core/migrations/: 0001_initial.py
src/model_w/project_maker/template/api/___project_name__snake___/django/: __init__.py  asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
src/model_w/project_maker/template/api/___project_name__snake___/django/middleware/: __init__.py  access_log.py
src/model_w/project_maker/template/api/bdd/: .gitignore  README.md  conftest.py  hooks.py  test_utils.py
src/model_w/project_maker/template/api/bdd/_infrastructure/: docker-compose-e2e.yaml  docker-compose-run.yaml  mock-digital-ocean-router.conf
src/model_w/project_maker/template/api/bdd/features/: a11y.feature  smoke-test.feature  visual_regressions.feature
src/model_w/project_maker/template/api/bdd/fixtures/: __init__.py  data.py  front.py  visual_regression.py
src/model_w/project_maker/template/api/bdd/performance/: locustfile.py  test_performance.sh
src/model_w/project_maker/template/api/bdd/report/: reporter.py  utils.py
src/model_w/project_maker/template/api/bdd/step_definitions/: common_given.py  common_then.py  common_when.py  utils.py
src/model_w/project_maker/template/api/bdd/utils/: data_utils.py
src/model_w/project_maker/template/api/security/: report.md  report_template.md  threat_model.py
src/model_w/project_maker/template/api/src/___project_name__snake___/cms/templates/: base.html
src/model_w/project_maker/template/api/src/___project_name__snake___/django/: celery.py  settings.py  urls.py  wsgi.py
src/model_w/project_maker/template/api/src/___project_name__snake___/people/migrations/: 0001_initial.py
src/model_w/project_maker/template/front/: .dockerignore  .env-template  .env.test  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  Dockerfile.test  README.md  error.vue  nuxt.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts  vlang.yml
src/model_w/project_maker/template/front/components/: ServerTemplatedComponent.vue  server-templated-component.vue
src/model_w/project_maker/template/front/components/blocks/: Title1.vue
src/model_w/project_maker/template/front/components/wagtail/: Image.vue  Page.vue  StreamField.vue  Toast.vue
src/model_w/project_maker/template/front/components/wagtail/blocks/: Image.vue  Text.vue
src/model_w/project_maker/template/front/middleware/: wagtail.ts
src/model_w/project_maker/template/front/pages/: *.vue  [...wagtail].vue  no-wagtail-index.vue
src/model_w/project_maker/template/front/plugins/: axios.js  dom.client.js  dom.client.ts  dom.server.js  dom.server.ts  vue3-toastify.ts
src/model_w/project_maker/template/front/src/: app.html  hooks.client.ts  hooks.server.ts
src/model_w/project_maker/template/front/src/routes/: +layout.svelte
src/model_w/project_maker/template/front/stores/: layout.js
src/model_w/project_maker/template/front/types/: wagtail.d.ts
template/api/: pyproject.toml
template/api/src/___project_name__snake___/django/: __init__.py  asgi.py  routing.py  settings.py
template/api/src/___project_name__snake___/people/: views.py
template/api/src/__project_name__/django/: asgi.py  celery.py  settings.py  urls.py
tests/: test_grammar.py  test_namer.py
(+33 files in other folders)
