[tool.poetry]
name = "modelw-project-maker"
version = "2023.1.0b1"
packages = [
    {  include = "model_w/project_maker", from = "src" }
]

description = "A tool to create Model-W-compliant projects"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"
homepage = "https://github.com/ModelW/project-maker"
repository = "https://github.com/ModelW/project-maker"
documentation = "https://github.com/ModelW/project-maker"
readme = "README.md"
keywords = ["model-w", "django", "nuxt", "boilerplate", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
project_maker = "model_w.project_maker.__main__:__main__"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
Unidecode = "^1.3.4"
black = "^22.8.0"
isort = "^5.10.1"
tomlkit = "^0.11.4"
node-edge = "^0.1.0b2"
monoformat = "^0.1.0b3"
pathspec = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.isort]
profile = "black"
known_first_party = [
    "___project_name__snake___",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
