[tool.poetry]
name = "modelw-project-maker"
version = "2025.1.0"
packages = [
    {  include = "model_w/project_maker", from = "src" }
]

description = "A tool to create Model-W-compliant projects"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"
homepage = "https://github.com/ModelW/project-maker"
repository = "https://github.com/ModelW/project-maker"
documentation = "https://github.com/ModelW/project-maker"
readme = "README.md"
keywords = ["model-w", "django", "nuxt", "boilerplate", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
project_maker = "model_w.project_maker.__main__:__main__"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "*"
rich = "^13.4.2"
Unidecode = "^1.3.4"
black = "^22"
isort = "^5.10.1"
tomlkit = "^0.11.4"
node-edge = "^0.1.0b2"
monoformat = "^0.1.0b3"
pathspec = "~0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.isort]
profile = "black"
known_first_party = [
    "___project_name__snake___",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
