[tool.poetry]
name = "modelw-project-maker"
version = "2026.1.0"
packages = [
    {  include = "model_w/project_maker", from = "src" }
]

description = "A tool to create Model-W-compliant projects"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"
homepage = "https://github.com/ModelW/project-maker"
repository = "https://github.com/ModelW/project-maker"
documentation = "https://github.com/ModelW/project-maker"
readme = "README.md"
keywords = ["model-w", "django", "nuxt", "boilerplate", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
project_maker = "model_w.project_maker.__main__:__main__"

[tool.poetry.dependencies]
python = "^3.14"
setuptools = "*"
rich = "^14.2.0"
Unidecode = "^1.4.0"
black = "^23"
isort = "^5.13.2"
tomlkit = "^0.13.3"
node-edge = "^0.1.0b2"
monoformat = "^0.2.0"
pathspec = "~0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[tool.isort]
profile = "black"
known_first_party = [
    "___project_name__snake___",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
