[project]
requires-python = ">=3.11"

[tool.poetry]
name = "~~~project_name__snake~~~"
version = "0.1.0"
description = ""
authors = ["___dev_id___"]
license = "Proprietary"

packages = [
    {include = "___project_name__snake___"},
]

[tool.poetry.dependencies]
python = "~3.11"
modelw-preset-django = {extras = [
    "health",
    # :: IF api__celery
    "celery",
    # :: ENDIF
    # :: IF api__channels
    "channels",
    # :: ENDIF
    # :: IF api__wagtail
    "wagtail",
    # :: ENDIF
    # :: IF api__wsgi
    "gunicorn",
    # :: ENDIF
], version = ">=2024.7.0,<2024.8.0", allow-prereleases = true}
drf-spectacular = {extras = ["sidecar"], version = "^0.27.2"}
# Health check modules
markdown = "^3.5.1"
networkx = "^3.2.1"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
ipython = "*"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"

[tool.poetry.group.test.dependencies]
psutil = "^5.9.8"
pytest = "^8.1.1"
pytest-bdd = "^7.0.1"
pytest-django = "^4.8.0"
pytest-html = "^4.1.1"
pytest-playwright = "^0.4.4"
node-edge = {version = "^0.1.0b6", allow-prereleases = true}
pyyaml = "^6.0.1"

[tool.isort]
profile = "black"
known_first_party = "___project_name__snake___"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "___project_name__snake___.django.settings"
python_files = ["test_*.py", "*_test.py"]
django_debug_mode = "keep"
log_cli = true
log_file = "bdd/report/results/test.log"
addopts = ["--output", "bdd/report/results/media", "--screenshot", "on", "--video", "on", "--full-page-screenshot", "--cucumberjson=bdd/report/results/report.json", "--html=bdd/report/results/pytest.html"]

[tool.ruff.lint.per-file-ignores]
"**/bdd/**" = ["ARG001", "S101"]
"test_*.py" = ["ARG001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
